--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-entities": "^1.2.0",
     "json-bigint": "^0.2.0",
     "request": "^2.73.0",
+    "syncano": "^1.0.28",
     "uuid": "^3.0.1"
   },
   "repository": {
